--- a/index.html
+++ b/index.html
@@ -454,8 +454,9 @@
                     </div>
                 </div>
             </section>
-            <header id="our-core" data-w-id="cdd4b380-4e76-74ff-8861-7e2458ca1038" class="section_header78"><img src=""
-                    loading="lazy" width="270" alt="" class="decoration-image deco-03" />
+            <header id="our-core" data-w-id="cdd4b380-4e76-74ff-8861-7e2458ca1038" class="section_header78">
+                <!-- <img src=""
+                    loading="lazy" width="270" alt="" class="decoration-image deco-03" /> -->
                 <div class="padding-global">
                     <div class="container-large">
                         <div class="padding-section-large">
@@ -787,9 +788,10 @@
                                                 target="_blank" class="link-footer-logo w-inline-block"><img
                                                     src="https://cdn.prod.website-files.com/66e5890ea1e4f8cb03c2e9a5/670ffda083f1a3c401e29397_dexscreener.png"
                                                     loading="lazy" width="140" alt="" /></a>
-                                            <a aria-label="DEX Screener" href="https://dexscreener.com/" target="_blank"
-                                                class="link-footer-logo w-inline-block"><img src="Logo.webp"
-                                                    loading="lazy" width="140" alt="" /></a>
+                                            <a aria-label="DEX Screener"
+                                                href="https://four.meme/token/0xc1e3248940d16860cee3fbc6c1a1017d177ee49a"
+                                                target="_blank" class="link-footer-logo w-inline-block"><img
+                                                    src="Logo.webp" loading="lazy" width="140" alt="" /></a>
                                         </div>
                                         <div class="w-layout-grid footer7_legal-list"><a
                                                 href="https://x.com/BookofBroccoli1" target="_blank"
@@ -835,7 +837,8 @@
                             </div>
                         </div>
                     </div>
-                </div><img src="" loading="lazy" width="250" alt="" class="decoration-image deco-06" />
+                </div>
+                <!-- <img src="" loading="lazy" width="250" alt="" class="decoration-image deco-06" /> -->
             </footer>
         </main>
     </div>
