--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta content="Book of Broccoli-To unite #F2B and #F3B" property="og:description" />
     <meta content="66.png" property="og:image" />
     <meta content="Book of Broccoli-To unite #F2B and #F3B" property="twitter:title" />
-    <meta content=">Book of Broccoli-To unite #F2B and #F3B" property="twitter:description" />
+    <meta content="Book of Broccoli-To unite #F2B and #F3B" property="twitter:description" />
     <meta content="66.png" property="twitter:image" />
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
@@ -297,7 +297,7 @@
                         </a></div>
                     <nav role="navigation" class="navbar3_menu w-nav-menu"><a href="#"
                             class="navbar3_logo-link-menu w-nav-brand"><img width="137" loading="eager" alt=""
-                                src="59.png" class="navbar3_logo" /></a>
+                                src="66.png" class="navbar3_logo" /></a>
                         <a href="#about" class="navbar3_link w-nav-link">About</a><a href="#our-core"
                             class="navbar3_link w-nav-link">OUR CORE</a><a href="#tokenomics"
                             class="navbar3_link w-nav-link">Token</a><a href="#roadmap"
