--- a/index.html
+++ b/index.html
@@ -299,6 +299,38 @@
                     border-radius: 4px;
                     font-size: 20px;
                     font-family: Arial, sans-serif;
+                    max-width: 90%;
+                    /* Prevent caption overflow */
+                    box-sizing: border-box;
+                    white-space: nowrap;
+                    /* Keep text in single line */
+                }
+
+                /* Mobile-responsive adjustments */
+                @media (max-width: 768px) {
+                    .image-caption {
+                        font-size: 12px;
+                        /* Smaller text */
+                        padding: 2px 6px;
+                        /* Tighter padding */
+                        bottom: 4px;
+                        left: 4px;
+                        max-width: 85%;
+                        /* More space for small screens */
+                    }
+                }
+
+                @media (max-width: 768px) {
+                    .image-caption1 {
+                        font-size: 12px;
+                        /* Smaller text */
+                        padding: 2px 6px;
+                        /* Tighter padding */
+                        bottom: 4px;
+                        left: 4px;
+                        max-width: 85%;
+                        /* More space for small screens */
+                    }
                 }
             </style>
         </div>
