--- a/index.html
+++ b/index.html
@@ -281,11 +281,11 @@
                     position: absolute;
                     bottom: 8px;
                     right: 8px;
-                    background: rgba(136, 9, 9, 0.7);
+                    /* background: rgba(136, 9, 9, 0.7); */
                     color: white;
                     padding: 4px 8px;
                     border-radius: 4px;
-                    font-size: 20px;
+                    font-size: 25px;
                     font-family: Arial, sans-serif;
                 }
 
@@ -293,11 +293,11 @@
                     position: absolute;
                     bottom: 8px;
                     left: 8px;
-                    background: rgba(136, 9, 9, 0.7);
+                    /* background: rgba(136, 9, 9, 0.7); */
                     color: white;
                     padding: 4px 8px;
                     border-radius: 4px;
-                    font-size: 20px;
+                    font-size: 25px;
                     font-family: Arial, sans-serif;
                     max-width: 90%;
                     /* Prevent caption overflow */
@@ -309,7 +309,7 @@
                 /* Mobile-responsive adjustments */
                 @media (max-width: 768px) {
                     .image-caption {
-                        font-size: 12px;
+                        font-size: 20px;
                         /* Smaller text */
                         padding: 2px 6px;
                         /* Tighter padding */
@@ -322,7 +322,7 @@
 
                 @media (max-width: 768px) {
                     .image-caption1 {
-                        font-size: 12px;
+                        font-size: 20px;
                         /* Smaller text */
                         padding: 2px 6px;
                         /* Tighter padding */
