--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                     <div class="max-width-xlarge align-center">
                                         <div class="header142_content">
                                             <div class="margin-bottom margin-large">
-                                                <h1 blocks-non-deletable="true" class="hero-text">Book of Broccolli
+                                                <h1 blocks-non-deletable="true" class="hero-text">Book of Broccoli
                                                 </h1>
                                                 <div class="text-wrap w-clearfix">
                                                     <div class="changer-overflow">
