--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                             class="button is-tertiary is-icon-only is-small hide-mobile-landscape w-inline-block"><img
                                 src="https://cdn.prod.website-files.com/66e5890ea1e4f8cb03c2e9a5/66e7d0f1e9b76d749076442b_hugeicons_new-twitter.png"
                                 loading="lazy" alt="" class="icon-embed-xxsmall" /></a>
-                        <a aria-label="Go to Telegram" href="https://t.me/" target="_blank"
+                        <a aria-label="Go to Telegram" href="https://t.me/book_of_broccoli" target="_blank"
                             class="button is-tertiary is-icon-only is-small hide-mobile-landscape w-inline-block"><img
                                 src="https://cdn.prod.website-files.com/66e5890ea1e4f8cb03c2e9a5/66e7d0f18eeeadb3d68a477c_ic_sharp-telegram.png"
                                 loading="lazy" alt="" class="icon-embed-xxsmall" /></a>
@@ -467,9 +467,9 @@
                                 <div id="w-node-_291b7066-14e4-7f3a-8e19-b347b76da0f9-03c2ea09"
                                     class="layout359_colour">
                                     <div class="colour-code">
-                                        <div>#F2B</div>
-                                        <div>BOOK OF BROCCOLI</div>
-                                        <div>#F3B</div>
+                                        <div>#F2B, #F3B</div>
+                                        <div>BOOK OF BROCCOLI(#BOB)</div>
+                                        <div>#0714, #0808</div>
                                     </div>
                                 </div>
                                 <div id="w-node-_291b7066-14e4-7f3a-8e19-b347b76da0fb-03c2ea09"
@@ -495,15 +495,19 @@
                                         <div class="margin-bottom margin-xsmall">
                                             <h2 blocks-non-deletable="true"> BOOK OF BROCCOLI</h2>
                                         </div>
-                                        <p>Meet Broccoli, the legendary CZ Dog with a mission to bring laughter,
-                                            wisdom, and a little chaos to the crypto realm! Whether he's barking
-                                            market signals, sniffing out the next big trend, or just enjoying a
-                                            bowl of fresh greens, Broccoli is here to guide the pack.
+                                        <p>Broccoli is more than CZ’s companion – he’s the living proof that loyalty
+                                            transcends gravity. Just as he guards his human’s legacy, we guard the
+                                            principles of decentralization. His paw prints are etched in every protocol,
+                                            his spirit woven into every line of code. In this cosmic play, Broccoli is
+                                            both mascot and metaphor: a reminder that even the wildest frontiers can
+                                            feel like home
                                             <br>
-                                            As the guardian of decentralized memes, Broccoli bridges the gap
-                                            between serious crypto minds and lighthearted fun. Expect memes,
-                                            market insights, community-driven content, and a whole lot of
-                                            broccoli-powered energy!.
+                                            <br>
+                                            The Book of Broccoli is not a mere collection of projects – it’s a
+                                            constellation. We exist to align fragmented protocols (#F2B, #F3B, #714,
+                                            #080) into a unified galaxy, where each project becomes a star in a shared
+                                            universe. Inspired by Broccoli, CZ’s loyal companion, we embody trust,
+                                            exploration, and the relentless pursuit of blockchain’s final frontier.
                                         </p>
                                     </div><img src="" loading="lazy" width="241" alt="" class="graphic2" />
                                 </div>
@@ -512,10 +516,16 @@
                                         <h3>#F2B</h3>
                                     </div>
                                     <div class="core-item border-bottom">
-                                        <h3>BOOK OF BROCCOLI</h3>
+                                        <h3>#F3B</h3>
+                                    </div>
+                                    <div class="core-item border-bottom">
+                                        <h3>BOOK OF BROCCOLI(#BOB)</h3>
+                                    </div>
+                                    <div class="core-item border-bottom">
+                                        <h3>#714</h3>
                                     </div>
                                     <div class="core-item">
-                                        <h3>#F3B</h3>
+                                        <h3>#080</h3>
                                     </div>
                                 </div>
                             </div>
@@ -821,8 +831,9 @@
                             <div class="cta53_card-content">
                                 <div class="text-align-center">
                                     <h5 blocks-non-deletable="true" class="heading-style-h4">OUR GOAL?</h5>
-                                    <h3 blocks-non-deletable="true" class="display-text">UNITE #F2B and #F3B
-                                    </h3>
+                                    <h5 blocks-non-deletable="true" class="display-text">UNITE ALL BROCCOLIs
+                                        #F3B,#F2B, #080 and #0714
+                                    </h5>
                                 </div>
                             </div>
                         </div>
@@ -871,7 +882,7 @@
                                             loading="lazy" width="32" alt="" class="icon-embed-xsmall" />
                                         <div>twitter</div>
                                     </a>
-                                    <a href="https://t.me/" target="_blank"
+                                    <a href="https://t.me/book_of_broccoli" target="_blank"
                                         class="button is-small is-icon is-tertiary is-alternate w-inline-block"><img
                                             src="https://cdn.prod.website-files.com/66e5890ea1e4f8cb03c2e9a5/66ec9fa3f6a73bf05b5e3666_white-telegram.png"
                                             loading="lazy" width="32" alt="" class="icon-embed-xsmall" />
