--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                             class="button is-tertiary is-icon-only is-small hide-mobile-landscape w-inline-block"><img
                                 src="https://cdn.prod.website-files.com/66e5890ea1e4f8cb03c2e9a5/66e7d0f1e9b76d749076442b_hugeicons_new-twitter.png"
                                 loading="lazy" alt="" class="icon-embed-xxsmall" /></a>
-                        <a aria-label="Go to Telegram" href="https://t.me/book_of_broccoli" target="_blank"
+                        <a aria-label="Go to Telegram" href="https://t.me/bookofbrocolliportal" target="_blank"
                             class="button is-tertiary is-icon-only is-small hide-mobile-landscape w-inline-block"><img
                                 src="https://cdn.prod.website-files.com/66e5890ea1e4f8cb03c2e9a5/66e7d0f18eeeadb3d68a477c_ic_sharp-telegram.png"
                                 loading="lazy" alt="" class="icon-embed-xxsmall" /></a>
@@ -889,7 +889,7 @@
                                             loading="lazy" width="32" alt="" class="icon-embed-xsmall" />
                                         <div>twitter</div>
                                     </a>
-                                    <a href="https://t.me/book_of_broccoli" target="_blank"
+                                    <a href="https://t.me/bookofbrocolliportal" target="_blank"
                                         class="button is-small is-icon is-tertiary is-alternate w-inline-block"><img
                                             src="https://cdn.prod.website-files.com/66e5890ea1e4f8cb03c2e9a5/66ec9fa3f6a73bf05b5e3666_white-telegram.png"
                                             loading="lazy" width="32" alt="" class="icon-embed-xsmall" />
